@startuml
class App{
    String website
    String author
    String jsFolder
    String cssFolder
    String rootFolder
    String htmlFOlder

    + readInput()
}

class CreateFile {

    + generateFiles(rootFolder, websiteName, js, css)
    + chooseFiles(rootFolder, websiteName, jsChoice, cssChoice)
    + ifNull(returnString, temp)
    + generateJsAndCSSFiles(rootFolder, website, name)
    - fileCanBeCreated(file)
}

class CreateWebsiteFolder {
    + folders(root, website)
    + createRootFolder(rootFolder)
    + createWebsiteFolder(rootFOlder, webName)
}

class GenerateLink {

    + createHTMLLink(rootFolder ,website, author, htmlFolder)
    + createHtmlLink(author, website)
    + generateHead(author, website)
    + generateBody()
}

App o--> CreateFile
CreateFile o--> CreateWebsiteFolder
CreateWebsiteFolder o-->GenerateLink

@enduml